# rkllm-shell

./: .gitignore  Cargo.toml  LICENSE  README.md
rkllm-api-sys/: Cargo.toml  build.rs  wrapper.hpp
rkllm-shell/: Cargo.toml
rkllm-shell/src/: args.rs  logging.rs  main.rs
rkllm-shell/src/commands/: mod.rs  serve.rs
rkllm-shell/src/config/: default.yaml  mod.rs
rkllm-shell/src/server/: api_models.rs  defaults.rs  mod.rs  rkllm_runtime.rs
rkllm-shell/src/server/apis/: chat.rs  embed.rs  generate.rs  mod.rs  models.rs
rkllm-shell/src/terminal/: message.rs
